<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
        <!-- android:layout_below="@+id/bSqueeS"-->
        <!-- android:layout_marginTop="27dp"-->

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAction"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:text="@string/level"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLevel"
        android:layout_alignLeft="@+id/spinner1"
        android:text="@string/action"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/debug"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Button
        android:id="@+id/bBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDebug"
        android:layout_centerHorizontal="true"
        android:text="Scan" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bSqueeS"
        android:layout_below="@+id/tvStrength"/>
      <!--  android:textsize="50dp" --> 

    <TextView
        android:id="@+id/tvStrength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bBlue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/strength"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bSqueeS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAction"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/bSqueeS" />

</RelativeLayout>
